--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,7 @@
     font-weight: 300;
     overflow-x: hidden;
     color: #d5f8fe;
-
+    width:100vw;
     background-color: rgba(172, 21, 194, 0.1);
 
 }
