--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -166,18 +166,26 @@ p { line-height: 1.9; }
     margin: 4%;
 }
 
-@media (max-width: 380px) {
-    .about_container{
-        border: 0 solid black;
-        height: auto;
-    }
-}
-
 .about_container > h2{
     font-size: 2.5rem;
     color:#52ce86;
     margin-bottom: 2vh;
 }
+
+@media (max-width: 380px) {
+    .about_container{
+        border: 0 solid black;
+        height: auto;
+    }
+
+    .about_container > h2{
+        font-size: 1.2rem;
+        color:#52ce86;
+        margin-bottom: 2vh;
+    }
+}
+
+
 
 .project_button_group{
  width:100%;
