--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -135,7 +135,7 @@ p { line-height: 1.9; }
 
 .tm-col-right {
     margin-left: auto;
-
+    margin-right: auto;
     width: 60%;
     height: 100%;
 
@@ -177,6 +177,7 @@ p { line-height: 1.9; }
         width: 93vw;
         margin: 0;
         border : none;
+        height: auto;
     }
 
     .about_container > h2{
