--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -140,7 +140,16 @@ p { line-height: 1.9; }
     height: 100%;
 
 }
-
+.project_main_container{
+    font-size: clamp(1.2rem,1.5vw, 1.5rem);
+    overflow:auto;
+    height: 70vh;
+    border-top : 1px solid #d5f8fe;
+    border-bottom: 1px solid #d5f8fe;
+    background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    margin: 4%;
+}
 .project_container{
 
     font-size: clamp(1.2rem,1.5vw, 1.5rem);
