--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
 @font-face {
     font-family: Azonix;
     src: url(../fonts/Azonix.otf);
 }
+
 
 .index_main_container {
     font-family: Azonix, sans-serif;
@@ -30,7 +33,10 @@ a {
 ul { padding: 0; }
 a:hover { text-decoration: none; }
 button:focus { outline: none; }
-p { line-height: 1.9; }
+p {
+    line-height: 1.9;
+    font-family: 'Share Tech Mono', monospace;
+}
 .tm-logo { margin-right: 20px; color: #d5f8fe;}
 .tm-slogan { font-size: 0.8rem; color:#d5f8fe; }
 
@@ -162,6 +168,11 @@ p { line-height: 1.9; }
 
 .project_container > h3{
     color:#52ce86;
+    margin:3%;
+}
+
+.project_container > p{
+    margin:3%;
 }
 
 .about_container{
@@ -179,11 +190,22 @@ p { line-height: 1.9; }
 .about_container > h2{
     font-size: 2.5rem;
     color:#52ce86;
-    margin-bottom: 2vh;
+    margin-bottom: 4vh;
+
+}
+.about_container > p{
+    margin-bottom: 5vh;
 }
 
-@media (max-width: 380px) {
+
+@media (max-width: 580px) {
     .about_container{
+        width: 93vw;
+        margin: 0;
+        border : none;
+        height: auto;
+    }
+    .project_main_container{
         width: 93vw;
         margin: 0;
         border : none;
@@ -207,9 +229,20 @@ p { line-height: 1.9; }
 
 
 .project_button_group{
- width:100%;
+
+    display: flex;
     border-top: 1px dotted #d5f8fe;
+    justify-content: center;
 }
+
+.project_button_group > a{
+    margin:3%;
+}
+
+.project_button_group:hover{
+    /*background-color: rgba(0,123,255,0.67);*/
+}
+
 
 .tm-content {
     max-width: 660px;
