--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -142,19 +142,21 @@ p {
 .tm-col-right {
     margin-left: auto;
 
-    width: 60%;
+    width: 70%;
     height: 100%;
 
 }
 .project_main_container{
     font-size: clamp(1.2rem,1.5vw, 1.5rem);
     overflow:auto;
-    height: 70vh;
+
+    height: 80vh;
     border-top : 1px solid #d5f8fe;
     border-bottom: 1px solid #d5f8fe;
     background-color: rgba(0, 0, 0, 0.15);
     border-radius: 5px;
-    margin: 4%;
+
+
 }
 .project_container{
 
@@ -169,6 +171,15 @@ p {
 .project_container > h3{
     color:#52ce86;
     margin:3%;
+}
+
+.project_container > img{
+    width:200px;
+    height:250px;
+    float: left;
+    border : 1px solid #d5f8fe;
+    border-radius: 5px;
+    margin: 0 3% 3% 3%;
 }
 
 .project_container > p{
