--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -223,7 +223,7 @@ p {
         height: auto;
     }
     .project_container > img{
-        clear: left;
+        float: none;
         border : 1px solid #d5f8fe;
         border-radius: 5px;
         margin: 0 auto;
