changes to styling

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -76,44 +76,6 @@ p {
     color: #9CC;
 }
 
-/* Page Background */
-.tm-bg {
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    z-index: -1000;
-}
-
-.tm-bg-left,
-.tm-bg-right {
-    position: relative;
-    width: 50%;
-    height: 100%;
-}
-
-/*.tm-bg-right { background-color: rgba(0,0,0,0.5); }*/
-
-/*.tm-bg-left {*/
-/*    border-right: 230px solid rgba(0,0,0,0.5);*/
-/*    border-top: 100vh solid transparent;*/
-/*}*/
-
-.tm-bg-controls-wrapper {
-    display: inline-block;
-    margin-left: -150px;
-}
-
-.tm-bg-control {
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    background-color: rgb(255,255,255);
-    margin: 6px;
-    cursor: pointer;
-}
 
 .tm-bg-control.active,
 .tm-bg-control:hover {
@@ -165,7 +127,7 @@ p {
     background-color: rgba(35, 33, 35, 0.8);
     border-radius: 5px;
     padding: 10px;
-    margin: 4%;
+    margin: 3%;
 }
 
 .project_container > h3{
@@ -184,6 +146,9 @@ p {
 
 .project_container > p{
     margin:3%;
+}
+.project_button_group{
+    clear: left;
 }
 
 .about_container{
@@ -220,12 +185,17 @@ p {
         margin: 0;
         border : none;
         height: auto;
+        background-color: rgba(0, 0, 0, 0);
+    }
+    .index_main_container{
+        align-items: center;
     }
     .project_main_container{
         width: 93vw;
         margin: 0 auto;
         border : none;
         height: auto;
+        background-color: rgba(0, 0, 0, 0);
     }
     .project_container > img{
         float: none;
